@@ -1,5 +1,10 @@
 2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>
 
+	* src/SDCCicode.c:
+	  Fix RFE #736.
+
+2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>
+
 	* src/z80/gen.c:
 	  Add Z80 GETWORD optimization for Z80.
 
